--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="index.html">
-								<img src="assets/img/logo.png" alt="">
+								<img src="WhatsApp Image 2023-10-04 at 8.19.39 PM copy.png" alt="">
 							</a>
 						</div>
 						<!-- logo -->
