--- a/index_2.html
+++ b/index_2.html
@@ -51,7 +51,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="index.html">
-								<img src="WhatsApp Image 2023-10-04 at 8.19.39 PM copy.png" alt="">
+								<img src="file:///Users/hooi/Downloads/WhatsApp%20Image%202023-10-04%20at%208.19.39%20PM%20copy.png" alt="">
 							</a>
 						</div>
 						<!-- logo -->
