--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									</ul>
 								</li>
 								<li><a href="about.html">About</a></li>
-								<li><a href="#">Pages</a>
+								<li--><a href="#">Pages</a>
 									<ul class="sub-menu">
 										<li><a href="404.html">404 page</a></li>
 										<li><a href="about.html">About</a></li>
@@ -77,7 +77,7 @@
 										<li><a href="shop.html">Shop</a></li>
 									</ul>
 								</li>
-								<li><a href="news.html">News</a>
+								<li--><a href="news.html">News</a>
 									<ul class="sub-menu">
 										<li><a href="news.html">News</a></li>
 										<li><a href="single-news.html">Single News</a></li>
