--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									</ul>
 								</li>
 								<li><a href="about.html">About</a></li>
-								<li--><a href="#">Pages</a>
+								<!--li><a href="#">Pages</a>
 									<ul class="sub-menu">
 										<li><a href="404.html">404 page</a></li>
 										<li><a href="about.html">About</a></li>
