--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
 						<h2 class="widget-title">About us</h2>
-						<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+						<p>Fook Gor Durian Farm is located in Sungai Klau, Raub, Pahang. It has been managed for over 30 years by an organisation of Durian Specialists. It was also the first durian plantation to cultivate the famous Musang King Durian in 1986.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
