--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
-							<li>34/8, East Hukupara, Gifirtok, Sadan.</li>
-							<li>support@fruitkha.com</li>
-							<li>+00 111 222 3333</li>
+							<li>No. 428, D M Malaysia, Sungai Klau, 27630 Raub, Pahang, Malaysia.</li>
+							<li>fookgorking@gmail.com</li>
+							<li>+60146600288</li>
 						</ul>
 					</div>
 				</div>
