get in touch-contact new

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
-							<li>No. 428, D M Malaysia, Sungai Klau, 27630 Raub, Pahang, Malaysia.</li>
+							<li>No. 428, Sungai Klau, 27630, Raub, Pahang, Malaysia.</li>
 							<li>fookgorking@gmail.com</li>
 							<li>+60146600288</li>
 						</ul>
