--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
 				</div>
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-text">
-						<p class="top-sub">Since Year 1999</p>
-						<h2>We are <span class="orange-text">Fruitkha</span></h2>
-						<p>Etiam vulputate ut augue vel sodales. In sollicitudin neque et massa porttitor vestibulum ac vel nisi. Vestibulum placerat eget dolor sit amet posuere. In ut dolor aliquet, aliquet sapien sed, interdum velit. Nam eu molestie lorem.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente facilis illo repellat veritatis minus, et labore minima mollitia qui ducimus.</p>
+						<p class="top-sub">Since Year 1986</p>
+						<h2>We are <span class="orange-text">Fook Gor Durian Farm</span></h2>
+						<p>Fook Gor Durian Farm is located in Sungai Klau, Raub, Pahang. It has been managed for over 30 years by an organisation of Durian Specialists. It was also the first durian plantation to cultivate the famous Musang King Durian in 1986.</p>
+						<p>Our story began decades ago when our ancestors planted the first durian trees in this lush and fertile land. Over the years, we have cultivated a wide variety of durian cultivars, each celebrated for its unique taste and aroma.</p>
 						<a href="about.html" class="boxed-btn mt-4">know more</a>
 					</div>
 				</div>
@@ -507,7 +507,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
-					<p>Copyrights &copy; 2019 - <a href="https://imransdesign.com/">Imran Hossain</a>,  All Rights Reserved.</p>
+					<p>Copyrights &copy; 2023 - <a href="https://imransdesign.com/">Imran Hossain</a>,  All Rights Reserved.</p>
 				</div>
 				<div class="col-lg-6 text-right col-md-12">
 					<div class="social-icons">
