--- a/index.html
+++ b/index.html
@@ -334,7 +334,8 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-bg">
-						<a href="https://www.youtube.com/watch?v=DBLlFWYcIGQ" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
+							<a href="single-homepage-slider.html"><img src="C:\Users\Asus\Pictures\uiux\71313878_1433424443487113_412986136579801088_n.jpg" alt=""></a>
+						</div>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12">
