buat sekali lagi

--- a/index.html
+++ b/index.html
@@ -334,15 +334,14 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-bg">
-							<a href="single-homepage-slider.html"><img src="C:\Users\Asus\Pictures\uiux\71313878_1433424443487113_412986136579801088_n.jpg" alt=""></a>
-						</div>
+						<a href="https://www.youtube.com/watch?v=DBLlFWYcIGQ" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-text">
 						<p class="top-sub">Since Year 1986</p>
 						<h2>We are <span class="orange-text">Fook Gor Durian Farm</span></h2>
-						<p>Fook Gor Durian Farm is located in Sungai Klau, Raub, Pahang. It has been managed for over 30 years by an organisation of Durian Specialists. It was also the first durian plantation to cultivate the famous Musang King Durian in 1986.</p>
+						<p> Fook Gor Durian Farm is located in Sungai Klau, Raub, Pahang. It has been managed for over 30 years by an organisation of Durian Specialists. It was also the first durian plantation to cultivate the famous Musang King Durian in 1986.</p>
 						<p>Our story began decades ago when our ancestors planted the first durian trees in this lush and fertile land. Over the years, we have cultivated a wide variety of durian cultivars, each celebrated for its unique taste and aroma.</p>
 						<a href="about.html" class="boxed-btn mt-4">know more</a>
 					</div>
