--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+							<a href="single-product.html"><img src="C:\Users\Asus\Pictures\uiux\106532919_1712104668952421_7835667435623627305_n.jpg" alt=""></a>
 						</div>
 						<h3>Fresh Durian</h3>
 						<p class="product-price"><span>Per Kg</span> RM65 </p>
