--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,7 @@
 				<div class="col-lg-8 mb-5 mb-lg-0">
 					<div class="form-title">
 						<h2>Have you any question?</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, ratione! Laboriosam est, assumenda. Perferendis, quo alias quaerat aliquid. Corporis ipsum minus voluptate? Dolore, esse natus!</p>
+						<p>Fook Gor Durian Farm is located in Sungai Klau, Raub, Pahang. It has been managed for over 30 years by an organisation of Durian Specialists. It was also the first durian plantation to cultivate the famous Musang King Durian in 1986.</p>
 					</div>
 				 	<div id="form_status"></div>
 					<div class="contact-form">
@@ -174,15 +174,15 @@
 					<div class="contact-form-wrap">
 						<div class="contact-form-box">
 							<h4><i class="fas fa-map"></i> Shop Address</h4>
-							<p>34/8, East Hukupara <br> Gifirtok, Sadan. <br> Country Name</p>
+							<p>428, Sungai Klau <br> 27630, Raub, Pahang, <br> Malaysia.</p>
 						</div>
 						<div class="contact-form-box">
 							<h4><i class="far fa-clock"></i> Shop Hours</h4>
-							<p>MON - FRIDAY: 8 to 9 PM <br> SAT - SUN: 10 to 8 PM </p>
+							<p>MON - FRIDAY: 9 AM to 6 PM <br> SAT - SUN: 10 AM to 6 PM </p>
 						</div>
 						<div class="contact-form-box">
 							<h4><i class="fas fa-address-book"></i> Contact</h4>
-							<p>Phone: +00 111 222 3333 <br> Email: support@fruitkha.com</p>
+							<p>Phone: +60 146 600 288 <br> Email: fookgorking@gmail.com</p>
 						</div>
 					</div>
 				</div>
@@ -205,7 +205,7 @@
 
 	<!-- google map section -->
 	<div class="embed-responsive embed-responsive-21by9">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26432.42324808999!2d-118.34398767954286!3d34.09378509738966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bf07045279bf%3A0xf67a9a6797bdfae4!2sHollywood%2C%20Los%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1576846473265!5m2!1sen!2sbd" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="embed-responsive-item"></iframe>
+		<iframe src="https://www.google.com/maps/place/Fook+Gor+Durian+Farm+(Musang+King)/@3.745154,101.9622584,14z/data=!4m10!1m2!2m1!1s428,sungai+klau,+raub,+pahang!3m6!1s0x31cbfc0220e9836f:0x717d4f7bd30c6825!8m2!3d3.7402728!4d101.98787!15sCh00Mjgsc3VuZ2FpIGtsYXUsIHJhdWIsIHBhaGFuZ5IBBGZhcm3gAQA!16s%2Fg%2F11btww1mts?entry=ttu" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="embed-responsive-item"></iframe>
 	</div>
 	<!-- end google map section -->
 
@@ -217,16 +217,16 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
 						<h2 class="widget-title">About us</h2>
-						<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+						<p>Fook Gor Durian Farm is located in Sungai Klau, Raub, Pahang. It has been managed for over 30 years by an organisation of Durian Specialists. It was also the first durian plantation to cultivate the famous Musang King Durian in 1986.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
-							<li>34/8, East Hukupara, Gifirtok, Sadan.</li>
-							<li>support@fruitkha.com</li>
-							<li>+00 111 222 3333</li>
+							<li>428, Sungai Klau, 27630, Raub, Pahang, Malaysia.</li>
+							<li>fookgorking@gmail.com</li>
+							<li>+60 146 600 288</li>
 						</ul>
 					</div>
 				</div>
@@ -237,8 +237,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="services.html">Shop</a></li>
-							<li><a href="news.html">News</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<!--li><a href="news.html">News</a></li>
+							<li--><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
