--- a/contact.html
+++ b/contact.html
@@ -178,11 +178,11 @@
 						</div>
 						<div class="contact-form-box">
 							<h4><i class="far fa-clock"></i> Shop Hours</h4>
-							<p>MON - FRIDAY: 9 AM to 6 PM <br> SAT - SUN: 10 AM to 6 PM </p>
+							<p>MON - FRI: 9 AM to 6 PM <br> SAT - SUN: 10 AM to 6 PM </p>
 						</div>
 						<div class="contact-form-box">
 							<h4><i class="fas fa-address-book"></i> Contact</h4>
-							<p>Phone: +60 146 600 288 <br> Email: fookgorking@gmail.com</p>
+							<p>Phone: +60146600288 <br> Email: fookgorking@gmail.com</p>
 						</div>
 					</div>
 				</div>
@@ -205,8 +205,7 @@
 
 	<!-- google map section -->
 	<div class="embed-responsive embed-responsive-21by9">
-		<iframe src="https://www.google.com/maps/place/Fook+Gor+Durian+Farm+(Musang+King)/@3.745154,101.9622584,14z/data=!4m10!1m2!2m1!1s428,sungai+klau,+raub,+pahang!3m6!1s0x31cbfc0220e9836f:0x717d4f7bd30c6825!8m2!3d3.7402728!4d101.98787!15sCh00Mjgsc3VuZ2FpIGtsYXUsIHJhdWIsIHBhaGFuZ5IBBGZhcm3gAQA!16s%2Fg%2F11btww1mts?entry=ttu" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" class="embed-responsive-item"></iframe>
-	</div>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31850.38295524118!2d101.96225844557924!3d3.7451539830359732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cbfc0220e9836f%3A0x717d4f7bd30c6825!2sFook%20Gor%20Durian%20Farm%20(Musang%20King)!5e0!3m2!1szh-CN!2smy!4v1699870155779!5m2!1szh-CN!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>	</div>
 	<!-- end google map section -->
 
 
