--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>We sale fresh fruits</p>
+						<p>We sale fresh durian</p>
 						<h1>About Us</h1>
 					</div>
 				</div>
