--- a/about.html
+++ b/about.html
@@ -275,9 +275,9 @@
 								<img src="assets/img/avaters/avatar1.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Saira Hakim <span>Local shop owner</span></h3>
+								<h3>Chan Lai Fook <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									"Over the years, we have cultivated a wide variety of durian cultivars, each celebrated for its unique taste and aroma. Our commitment to quality is unwavering. We understand that the true essence of a Pahang durian lies in its flavor, aroma, and freshness."
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -289,9 +289,9 @@
 								<img src="assets/img/avaters/avatar2.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>David Niph <span>Local shop owner</span></h3>
+								<h3>Michael Chan <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									"We are dedicated to preserving the environment and maintaining sustainable farming practices. Our durian trees are nurtured with care, and we strive to minimize our ecological footprint to ensure the long-term health of our farm and the surrounding ecosystem. "
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
