--- a/about.html
+++ b/about.html
@@ -404,7 +404,7 @@
 				<div class="col-lg-6 text-right col-md-12">
 					<div class="social-icons">
 						<ul>
-							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li> <p><a href="https://www.facebook.com/FGDurianfarm/"></a></p>
+							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li> 
 							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
 							<li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
