--- a/about.html
+++ b/about.html
@@ -405,10 +405,8 @@
 					<div class="social-icons">
 						<ul>
 							<li><a href="https://www.facebook.com/FGDurianfarm" target="_blank"><i class="fab fa-facebook-f"></i></a></li> 
-							<!--li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-							<li--><a href="https://www.instagram.com/fookgordurian/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i class="fab fa-instagram"></i></a></li>
-							<!--li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-							<li--><a href="https://www.youtube.com/results?search_query=fook+gor+durian+farm" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+							<li><a href="https://www.instagram.com/fookgordurian/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><i class="fab fa-instagram"></i></a></li>
+							<li><a href="https://www.youtube.com/results?search_query=fook+gor+durian+farm" target="_blank"><i class="fab fa-dribbble"></i></a></li>
 						</ul>
 					</div>
 				</div>
