update product price and name

--- a/index_2.html
+++ b/index_2.html
@@ -251,30 +251,30 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/product durian.jpg" alt=""></a>
 						</div>
 						<h3>Fresh Durian</h3>
-						<p class="product-price"><span>Per Kg</span> RM85 </p>
+						<p class="product-price"><span>Per Kg</span> RM65 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/packed durian.jpg" alt=""></a>
 						</div>
 						<h3>Packed Durian</h3>
-						<p class="product-price"><span>Per Kg</span> 70$ </p>
+						<p class="product-price"><span>Per Kg</span> RM85 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/durian paste.jpg" alt=""></a>
 						</div>
 						<h3>Durian Paste</h3>
-						<p class="product-price"><span>Per Kg</span> 35$ </p>
+						<p class="product-price"><span>Per Kg</span> RM95 </p>
 						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 					</div>
 				</div>
