--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 						</div>
 						<div class="content">
 							<h3>Free Shipping</h3>
-							<p>When order over $75</p>
+							<p>When order over RM250</p>
 						</div>
 					</div>
 				</div>
@@ -366,7 +366,7 @@
 		<div class="container">
 
 			<div class="row">
-				<div class="col-lg-8 offset-lg-2 text-center">
+				<!div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">	
 						<h3><span class="orange-text">Our</span> News</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
