--- a/index.html
+++ b/index.html
@@ -201,7 +201,6 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">	
 						<h3><span class="orange-text">Our</span> Products</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
 					</div>
 				</div>
 			</div>
@@ -220,7 +219,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/packed durian.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/packed durian.JPG" alt=""></a>
 						</div>
 						<h3>Packed Durian</h3>
 						<p class="product-price"><span>500g</span> RM85 </p>
