--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="index.html">
-								<img src="assets/img/logo.png" alt="">
+								<img src="assets/img/logo2.png"height=72 width=72 alt="">
 							</a>
 						</div>
 						<!-- logo -->
