--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="single-product.html"><img src="assets/img/products/durian paste.jpg" alt=""></a>
+							<a href="single-product.html"><img src="assets/img/products/durian paste.JPG" alt=""></a>
 						</div>
 						<h3>Durian paste</h3>
 						<p class="product-price"><span>Per Kg</span> RM95 </p>
