--- a/about.html
+++ b/about.html
@@ -251,7 +251,7 @@
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
 					<div class="single-team-item">
 						<div class="team-bg team-bg-3"></div>
-						<h4>Simon Joe <span>Farmer</span></h4>
+						<h4>Chan Yao Joe <span>Farmer</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -277,7 +277,7 @@
 							<div class="client-meta">
 								<h3>Chan Lai Fook <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									"Over the years, we have cultivated a wide variety of durian cultivars, each celebrated for its unique taste and aroma. Our commitment to quality is unwavering. We understand that the true essence of a Pahang durian lies in its flavor, aroma, and freshness."
+									" Over the years, we have cultivated a wide variety of durian cultivars, each celebrated for its unique taste and aroma. Our commitment to quality is unwavering. We understand that the true essence of a Pahang durian lies in its flavor, aroma, and freshness. "
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -291,7 +291,7 @@
 							<div class="client-meta">
 								<h3>Michael Chan <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									"We are dedicated to preserving the environment and maintaining sustainable farming practices. Our durian trees are nurtured with care, and we strive to minimize our ecological footprint to ensure the long-term health of our farm and the surrounding ecosystem. "
+									" We are dedicated to preserving the environment and maintaining sustainable farming practices. Our durian trees are nurtured with care, and we strive to minimize our ecological footprint to ensure the long-term health of our farm and the surrounding ecosystem. "
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -303,9 +303,9 @@
 								<img src="assets/img/avaters/avatar3.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Jacob Sikim <span>Local shop owner</span></h3>
+								<h3>Chan Yao Joe <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									" I believe that every durian should be a moment of culinary delight and cultural appreciation. "
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
