--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 	<title>404!</title>
 
 	<!-- favicon -->
-	<link rel="shortcut icon" type="image/png" href="assets/img/logo2.png"height=72 width=72 alt="">
+	<link rel="shortcut icon" type="image/png" href="assets/img/logo2.png">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
@@ -51,7 +51,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="index.html">
-								<img src="assets/img/logo2.png"height=72 width=72 alt="">
+								<img src="assets/img/logo2.png">
 							</a>
 						</div>
 						<!-- logo -->
@@ -61,8 +61,6 @@
 							<ul>
 								<li class="current-list-item"><a href="#">Home</a>
 									<ul class="sub-menu">
-										<li><a href="index.html">Static Home</a></li>
-										<li><a href="index_2.html">Slider Home</a></li>
 									</ul>
 								</li>
 								<li><a href="about.html">About</a></li>
@@ -195,16 +193,16 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
 						<h2 class="widget-title">About us</h2>
-						<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+						<p>Fook Gor Durian Farm is located in Sungai Klau, Raub, Pahang. It has been managed for over 30 years by an organisation of Durian Specialists. It was also the first durian plantation to cultivate the famous Musang King Durian in 1986.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
-							<li>34/8, East Hukupara, Gifirtok, Sadan.</li>
+							<li>No. 428, Sungai Klau, 27630, Raub, Pahang, Malaysia</li>
 							<li>support@fruitkha.com</li>
-							<li>+00 111 222 3333</li>
+							<li>+60146600288</li>
 						</ul>
 					</div>
 				</div>
@@ -240,7 +238,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
-					<p>Copyrights &copy; 2019 - <a href="https://imransdesign.com/">Imran Hossain</a>,  All Rights Reserved.</p>
+					<p>Copyrights &copy; 2023 - <a href="https://imransdesign.com/">Tan Kar Hooi & Leng Yi Teng</a>,  All Rights Reserved.</p>
 				</div>
 				<div class="col-lg-6 text-right col-md-12">
 					<div class="social-icons">
