--- a/404.html
+++ b/404.html
@@ -238,7 +238,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
-					<p>Copyrights &copy; 2023 - <a href="https://imransdesign.com/">Tan Kar Hooi & Leng Yi Teng</a>,  All Rights Reserved.</p>
+					<p>Copyrights &copy; 2023 - <a href>Tan Kar Hooi & Leng Yi Teng</a>,  All Rights Reserved.</p>
 				</div>
 				<div class="col-lg-6 text-right col-md-12">
 					<div class="social-icons">
