--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">Home</a>
+								<a href="#">Home</a>
 									<ul class="sub-menu">
 									</ul>
 								</li>
