--- a/about.html
+++ b/about.html
@@ -59,7 +59,10 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">Home</a>
+								<a href="#">Home</a>
+									<ul class="sub-menu">
+									</ul>
+								</li>
 								<li><a href="about.html">About</a></li>
 								<!--li><a href="#">Pages</a>
 									<ul class="sub-menu">
