--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li><a href="homepage.html">Home</a></li>
+								<li><a href="single-homepage-slider.html">Home</a></li>
 									<ul class="sub-menu">
 									</ul>
 								</li>
