--- a/cart.html
+++ b/cart.html
@@ -59,7 +59,7 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">Home</a>
+								<li><a href="homepage.html">Home</a></li>
 									<ul class="sub-menu">
 									</ul>
 								</li>
