--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">Home</a>
-									<ul class="sub-menu">
-									</ul>
+								<li><a href="index.html">Home</a></li>
+								</ul>
 								</li>
 								<li><a href="about.html">About</a></li>
 								<!--li><a href="#">Pages</a>
